# ascraper

./: amazon_best_sellers.csv  amazon_best_sellers_baby.csv  amazon_best_sellers_baby_2.csv  amazon_best_sellers_kitchen.csv  amazon_best_sellers_pets.csv  amazon_best_sellers_sports.csv  pyproject.toml
amazon_scraper/: __init__.py
