[tool.poetry]
name = "amazon-scraper"
version = "0.1.0"
description = ""
authors = ["Robert Jurewicz <jurewicz.robert@gmail.com>"]
readme = "README.md"
packages = [{include = "amazon_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
selenium = "^4.10.0"
pandas = "^2.0.3"
webdriver-manager = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
